[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/components/Modal.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="QuitModal" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 960.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 435.0
margin_top = 220.0
margin_right = 525.0
margin_bottom = 315.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="RichTextLabel" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 15.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center]FLFA PROJECT[/center]"
text = "FLFA PROJECT"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 90.0
margin_bottom = 23.0

[node name="LocalButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 90.0
margin_bottom = 47.0
text = "Local Play"

[node name="OnlineButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 90.0
margin_bottom = 71.0
text = "Online Play"

[node name="ExitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 90.0
margin_bottom = 95.0
text = "Quit Game"

[connection signal="no_pressed" from="QuitModal" to="." method="_on_QuitModal_no_pressed"]
[connection signal="yes_pressed" from="QuitModal" to="." method="_on_QuitModal_yes_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
